TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_after.dot
digraph AST {
  "126456762284640" [label="Start"];
  "126456762284640" -> "126456762281808";
  "126456762281808" [label="Code"];
  "126456762281808" -> "126456762281952";
  "126456762281952" [label="Function"];
  "126456762281952" -> "126456762280416";
  "126456762281952" -> "126456762280176";
  "126456762281952" -> "126456762277680";
  "126456762280416" [label="main IDENTIFIER"];
  "126456762280176" [label="Parameters"];
  "126456762277680" [label="Code"];
  "126456762277680" -> "126456762278832";
  "126456762277680" -> "126456762090256";
  "126456762277680" -> "126456762356432";
  "126456762277680" -> "126456762357008";
  "126456762277680" -> "126456762357296";
  "126456762278832" [label="Declaration"];
  "126456762278832" -> "126456762279552";
  "126456762278832" -> "126456762090544";
  "126456762279552" [label="x IDENTIFIER"];
  "126456762090544" [label="1 INT"];
  "126456762090256" [label="Code"];
  "126456762090256" -> "126456762353600";
  "126456762090256" -> "126456762353456";
  "126456762090256" -> "126456762355040";
  "126456762090256" -> "126456762356048";
  "126456762353600" [label="Declaration"];
  "126456762353600" -> "126456762353504";
  "126456762353600" -> "126456762353312";
  "126456762353504" [label="x IDENTIFIER"];
  "126456762353312" [label="3 INT"];
  "126456762353456" [label="Declaration"];
  "126456762353456" -> "126456762354800";
  "126456762353456" -> "126456762354944";
  "126456762354800" [label="y IDENTIFIER"];
  "126456762354944" [label="2 INT"];
  "126456762355040" [label="Declaration"];
  "126456762355040" -> "126456762355232";
  "126456762355040" -> "126456762355376";
  "126456762355232" [label="z IDENTIFIER"];
  "126456762355376" [label="Expr"];
  "126456762355376" -> "126456762355568";
  "126456762355376" -> "126456762355856";
  "126456762355376" -> "126456762356000";
  "126456762355568" [label="Dereference"];
  "126456762355568" -> "126456762355760";
  "126456762355760" [label="y IDENTIFIER"];
  "126456762355856" [label="+ T__41"];
  "126456762356000" [label="Dereference"];
  "126456762356000" -> "126456762356192";
  "126456762356192" [label="x IDENTIFIER"];
  "126456762356048" [label="Comment"];
  "126456762356048" -> "126456762356384";
  "126456762356384" [label=" local z should be 5 COMMENT"];
  "126456762356432" [label="Declaration"];
  "126456762356432" -> "126456762356624";
  "126456762356432" -> "126456762356768";
  "126456762356624" [label="z IDENTIFIER"];
  "126456762356768" [label="Dereference"];
  "126456762356768" -> "126456762356960";
  "126456762356960" [label="x IDENTIFIER"];
  "126456762357008" [label="Comment"];
  "126456762357008" -> "126456762357200";
  "126456762357200" [label=" z should now be 1 COMMENT"];
  "126456762357296" [label="Return"];
  "126456762357296" -> "126456762357488";
  "126456762357488" [label="0 INT"];
}
